--- a/.htaccess
+++ b/.htaccess
@@ -2,13 +2,19 @@
     RewriteEngine On
     RewriteBase /
 
-    # Block TRACE/TRACK for security
+    # 🔒 Prevent TRACE/TRACK methods (security)
     RewriteCond %{REQUEST_METHOD} ^(TRACE|TRACK)
     RewriteRule .* - [F]
 
-    # Avoid looping on index.php
+    # ✅ Redirect /index.php to /
+    RewriteCond %{THE_REQUEST} /index\.php [NC]
+    RewriteRule ^index\.php$ / [R=301,L]
+
+    # ✅ Rewrite all non-files and non-dirs to index.php
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_URI} !^/index\.php$
-    RewriteRule ^(.*)$ index.php [QSA,L]
+    RewriteRule ^ index.php [QSA,L]
 </IfModule>
+
+# ✅ Make sure index.php is used as the default document
+DirectoryIndex index.php
